--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "71070ab1-2b47-4e60-ac08-1e2281b45c67",
+    });
+  });
+</script>
 <title>Hayden Co Christmas!</title>
 </head>
 <body>
